--- a/manifest.yml
+++ b/manifest.yml
@@ -10,10 +10,10 @@ applications:
 - services:
   - iot-phone-cloudant-cloudantNoSQLDB
   - iot-phone-iotf-service
-  host: iot-phone
-  name: iot-phone
-  disk: 128M
+  #host: iot-phone
+  #name: iot-phone
+  #disk: 128M
   command: node app.js
   path: .
-  memory: 128M 
+  #memory: 128M 
   instances: 1
